istio-global-ratelimit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ratelimit-demo
  labels:
    istio.io/rev: 1-24-2
